# cpack-exercise

./: .gitignore  README.md
hello/: CMakeLists.txt
hello/src/: main.c
world/: CMakeLists.txt
world/cmake/: WorldLibraryConfig.cmake.in
world/cmake/packaging/: CPackConfig.cmake
world/include/: world.h
world/src/: world.c
world_lib/: CMakeLists.txt
world_lib/cmake/packaging/: CPackConfig.cmake
world_lib/include/: world.h
world_lib/src/: world.c
